# reverse_intercalate

./: CMakeLists.txt  README.md  setenv.bat  shell.bat
Task1/: CMakeLists.txt
Task1/pg/: CMakeLists.txt
Task1/ranges/: CMakeLists.txt
Task1/task1/: CMakeLists.txt  app.cpp  task1.cpp  task1.hpp  tests.cpp
